@@ -12,12 +12,19 @@ EXPORTS TIFFOpen
 	TIFFGetTagListEntry
 	TIFFGetTagListCount
 	TIFFReadDirectory
+	TIFFScanlineSize64
 	TIFFScanlineSize
+	TIFFStripSize64
 	TIFFStripSize
+	TIFFVStripSize64
 	TIFFVStripSize
+	TIFFRawStripSize64
 	TIFFRawStripSize
+	TIFFTileRowSize64
 	TIFFTileRowSize
+	TIFFTileSize64
 	TIFFTileSize
+	TIFFVTileSize64
 	TIFFVTileSize
 	TIFFFileno
 	TIFFSetFileno
@@ -86,17 +93,20 @@ EXPORTS TIFFOpen
 	TIFFWriteEncodedTile
 	TIFFWriteRawTile
 	TIFFSetWriteOffset
+	TIFFSwabFloat
 	TIFFSwabDouble
 	TIFFSwabShort
 	TIFFSwabLong
 	TIFFSwabArrayOfShort
 	TIFFSwabArrayOfLong
+	TIFFSwabArrayOfFloat
 	TIFFSwabArrayOfDouble
 	TIFFSwabArrayOfTriples
 	TIFFReverseBits
 	TIFFGetBitRevTable
 	TIFFDefaultStripSize
 	TIFFDefaultTileSize
+	TIFFRasterScanlineSize64
 	TIFFRasterScanlineSize
 	_TIFFmalloc
 	_TIFFrealloc
@@ -106,9 +116,6 @@ EXPORTS TIFFOpen
 	_TIFFmemcmp
 	TIFFCreateDirectory
 	TIFFSetTagExtender
-	TIFFMergeFieldInfo
-	TIFFFindFieldInfo
-	TIFFFindFieldInfoByName
 	TIFFFieldWithName
 	TIFFFieldWithTag
 	TIFFCurrentDirOffset
@@ -141,4 +148,3 @@ EXPORTS TIFFOpen
 	TIFFSwabArrayOfLong8
 	TIFFFindField
 	TIFFUnsetField
-	_TIFFCheckMalloc
